Nicer home page, display info on game pages

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -49,3 +49,21 @@ img {
 .label1 {
     padding: 10px;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color:blue;
+}
+
+.reviewLine {
+    padding: 5px;
+    color: black;
+}
+
+.reviewColor {
+    color: blue;
+}
