Remove time from game released date string

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -103,7 +103,7 @@
                 <div matListItemTitle>
                     <a href="game/{{game.slug}}">{{game.name}}</a>
                 </div>
-                <div matListItemLine>Releasing {{game.released}}
+                <div matListItemLine>Releasing {{game.released.slice(0,10)}}
                     <mat-divider></mat-divider>
                 </div>
             </mat-list-item> 
