added page navigation to top games and added 404 error for non-existant pages

--- a/src/app/top-games/top-games.component.css
+++ b/src/app/top-games/top-games.component.css
@@ -1,1 +1,18 @@
+.page1 {
+    margin: 0 auto;
+    display: block;
+}
 
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .left-button {
+    margin-right: auto;
+  }
+  
+  .right-button {
+    margin-left: auto;
+  }
