--- a/src/app/util/user/user.component.html
+++ b/src/app/util/user/user.component.html
@@ -1,29 +1,30 @@
 <span *ngIf="isLoggedIn">
     <p> we're in >:)</p>
-    <div class="content">
-
-        <!-- Username Header -->
-        <div class="header">
-            <h1>Username</h1>
-        </div>
-
-        <!-- User Information Container -->
-        <div class="box">
-            <!-- Left side of the container -->
-            <div class="left-box">
-                <img src="../../../assets/icon-profile.png">
-                <div class="spacer"></div>
-            </div>
-            <!-- Right side of the container -->
-            <div class="right-box">
-                <mat-card class="right-card">
-                    <h2 class="box-text">Profile Information</h2>
-                </mat-card>
-            </div>
-        </div>
-    </div>
 </span>
 
 <span *ngIf="!isLoggedIn">
     <p> we're out >:(</p>
 </span>
+
+<div class="content">
+
+    <!-- Username Header -->
+    <div class="header">
+        <h1>{{username}}</h1>
+    </div>
+
+    <!-- User Information Container -->
+    <div class="box">
+        <!-- Left side of the container -->
+        <div class="left-box">
+            <img src="../../../assets/icon-profile.png">
+            <div class="spacer"></div>
+        </div>
+        <!-- Right side of the container -->
+        <div class="right-box">
+            <mat-card class="right-card">
+                <h2 class="box-text">Profile Information</h2>
+            </mat-card>
+        </div>
+    </div>
+</div>
