top games linked to game pages

--- a/src/app/top-games/top-games.component.css
+++ b/src/app/top-games/top-games.component.css
@@ -1,9 +1,9 @@
-.page1 {
+  .page1 {
     margin: 0 auto;
     display: block;
-}
+  }
 
-.button-container {
+  .button-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,4 +15,13 @@
   
   .right-button {
     margin-left: auto;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  a:hover {
+    color:blue;
   }
