--- a/src/app/top-games/top-games.component.html
+++ b/src/app/top-games/top-games.component.html
@@ -7,7 +7,7 @@
                 <!-- Name Column -->
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef> Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                    <td mat-cell *matCellDef="let element"> <a href="game/{{element.name}}">{{element.name}} </a></td>
                 </ng-container>
                 <!-- Score column -->
                 <ng-container matColumnDef="rating">
